	  supported.)
	* SYSLINUX: mtools installer: honor TMPDIR, error out on disk
	  full.
	* Handle fallbacks from EDD to CHS, to deal with systems which
	  announce EDD support but don't actually have it.
	* SYSLINUX: the mtools, DOS and win32 installers now use the new
	  command line options.
	* PXELINUX: fix the use of IP addresses in TFTP :: or tftp://
	  host syntax.

Changes in 4.01:
	* ISOLINUX: fix initialization on systems which don't zero
	  low memory.
	* SYSLINUX/EXTLINUX: fix handing of disk read retries in
	  EDD mode.
	* ISOLINUX: change the initialization sequence to avoid
	  problems with certain (old) BIOSes.  Special thanks to
	  Helmut Hullen for invaluable debugging support.
	* ifplop.c32: new module which detects if the PLoP Boot Loader
	  already has booted a CDROM or USB drive (Gert Hulselmans).
	* Correct a severe memory overwrite bug, triggered primarily
	  when selecting a very long command line in the menu system.
	* lua.c32: Lua script interpreter, currently experimental
	  (Alexey Zaytsev, Marcel Ritter, Geert Stappers).
	* PXELINUX: new option IPAPPEND 4 to append the system UUID to
	  the kernel command line.
	* PXELINUX: display BOOTIF and SYSUUID at startup time, and
	  when Ctrl-N is pressed on the command line.

Changes in 4.00:
	* Major code base changes; all filesystem rewritten in C.
	  This work was done primarily by Liu Aleaxander (Yuanhan Liu).
	* EXTLINUX: btrfs and ext4 support.  btrfs support was done by
	  Alek Du of Intel.
	* EXTLINUX is no longer a separate derivative; extlinux and
	  syslinux both install the same loader (ldlinux.sys); for the
	  Linux-based installers the extlinux binary is used for a
	  mounted filesystem; the syslinux binary for an unmounted
	  filesystem.
	* When loading a new configuration file with the CONFIG
	  command, one can now also specify a new current directory
	  with an APPEND statement.
	* Full ADV support for Syslinux, to boot-once and MENU SAVE
	  works.