@@ -2,7 +2,5 @@ Building the Win32 installer requires the MinGW compiler, available at:
 
 	 http://www.mingw.org/
 
-Prepackaged versions of the MinGW cross-compiler in RPM format for
-Linux are available at:
-
-      http://mirzam.it.vu.nl/mingw/
+Prepackaged versions of the MinGW cross-compiler are now included in
+several Linux distributions, including Fedora.
