@@ -1,0 +1,24 @@
+#!/bin/sh
+
+cc="$1"
+
+for prefix in \
+    mingw64- \
+    x86_64-pc-mingw64- \
+    x86_64-pc-mingw64msvc- \
+    x86_64-pc-mingw32- \
+    x86_64-pc-mingw32msvc- \
+    x86_64-mingw64- \
+    x86_64-mingw64msvc- \
+    x86_64-mingw32- \
+    x86_64-mingw32msvc- \
+    ; do
+    if "${prefix}${cc}" -v > /dev/null 2>&1; then
+	echo "$prefix"
+	exit 0
+    fi
+done
+
+# No prefix, no idea what to do now...
+echo missing-
+exit 1
